# school-ps-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/core/: config.py  db.py
app/modules/: __init__.py
app/modules/auth/infrastructure/: models.py
app/modules/cafeteria/infrastructure/: models.py
app/modules/classroom/infrastructure/: models.py
app/modules/enrollment/infrastructure/: models.py
app/modules/health/api/: routes.py
app/modules/inventory/api/: routes.py
app/modules/inventory/application/: create_borrowing_inventory.py  create_item_inventory.py  create_type_inventory.py  get_items_inventory.py  update_item_inventory.py
app/modules/inventory/domain/: repositories.py  service.py
app/modules/inventory/infrastructure/: models.py
app/modules/inventory/schemas/: request.py  response.py
app/modules/musical_band/api/: routes.py
app/modules/peace_safe/infrastructure/: models.py
app/modules/principal/api/: routes.py
app/modules/principal/infrastructure/: models.py
app/modules/rectoria/api/: routes.py
app/modules/tests/infrastructure/: models.py
app/modules/training_schools/infrastructure/: models.py
app/modules/tuition/infrastructure/: models.py
app/shared/infrastructure/: base.py
app/shared/schemas/: filter_pagination.py
app/shared/utils/: filter_pagination.py  response.py
